# fancontrol

./: .gitignore  .gitmodules  Makefile  README.md  display.h  fancontrol.ino
board/: fancontroller.kicad_prl  fancontroller.kicad_pro  fancontroller.kicad_sch
calibration/: Makefile  gputemp  gputemp.cc
firmware/: .mxproject  CMakeLists.txt  Makefile  clock.py  display.h  firmware.ino  generate_table.py  main.cc  stm32cubemx.ioc
firmware/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
firmware/Core/Src/: adc.c  gpio.c  main.c  stm32f1xx_it.c  tim.c
firmware/cmake/stm32cubemx/: CMakeLists.txt
firmware/ssd1306-conf/: ssd1306_conf.h
firmware/stm32cubemx/: main.cc  stm32cubemx.ioc
firmware/stm32cubemx/Core/Inc/: main.h
firmware/stm32cubemx/Core/Src/: tim.c
firmware/stm32cubemx/cmake/stm32cubemx/: CMakeLists.txt
pcb/: fancontroller.kicad_pcb  fancontroller.kicad_prl  fancontroller.kicad_pro  fancontroller.kicad_sch  fp-lib-table  sym-lib-table
pcb/SSD1306/: README.md
pcb/jlcpcb/: project.db
